Changes to be committed: 	modified:   .vscode/settings.json 	modified:   lib/features/auth/presentation/pages/signup_page.dart

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "G:/dipu/flutter/flutter/flutter new/block_app/windows/flutter"
+    "cmake.sourceDirectory": "G:/dipu/flutter/flutter/flutter new/block_app/windows/flutter",
+    "cmake.ignoreCMakeListsMissing": true
 }
